--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,3 +1,10 @@
 {
-    
+    "nav": {
+        "home": "Home"
+    },
+    "app": {
+        "description": "Type your text here",
+        "send": "Send",
+        "result": "Result"
+    }
 }
